<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border_result_breathing">

    <TextView
        android:id="@+id/tx_bluetooth_mask_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_border_dialog_bluetooth"
        android:layout_marginTop="@dimen/margin_top_tx_bluetooth_mask_setting"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/tx_mask_setting"
        android:textColor="@color/black"
        android:textSize="@dimen/size_tx_connect_bluetooth_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_cancel_dialog_bluetooth"
        android:layout_width="@dimen/size_constraint_cancel_dialog_bluetooth"
        android:layout_height="@dimen/size_constraint_cancel_dialog_bluetooth"
        android:layout_marginEnd="@dimen/margin_side_border_dialog_bluetooth"
        android:background="@drawable/border_cancel_dialog_bluetooth"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/tx_bluetooth_mask_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tx_bluetooth_mask_setting">

        <TextView
            android:id="@+id/tx_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center_vertical"
            android:text="@string/tx_x"
            android:textColor="@color/color_tx_x"
            android:textSize="@dimen/size_tx_x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tx_connect_smart_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side_border_dialog_bluetooth"
        android:layout_marginTop="@dimen/margin_top_tx_connect_smart_mask"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/tx_mask_setting_detail"
        android:textColor="@color/color_tx_x"
        android:textSize="@dimen/size_tx_connect_smart_mask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_bluetooth_mask_setting" />

    <FrameLayout
        android:id="@+id/space_01"
        android:layout_width="@dimen/width_dialog_mask_setting"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_top_tx_connect_smart_mask"
        android:background="@color/space_find_smart_mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_connect_smart_mask" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/breath_anim_lottie"
        android:layout_width="@dimen/size_breath_anim_lottie"
        android:layout_height="@dimen/size_breath_anim_lottie"
        android:layout_marginTop="@dimen/margin_top_breath_anim_lottie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_01"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/breathing_anim" />

    <TextView
        android:id="@+id/tx_take_a_breath_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_tx_take_a_breath_01"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/tx_take_a_breath_01"
        android:textColor="@color/color_tx_x"
        android:textSize="@dimen/size_tx_connect_smart_mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breath_anim_lottie" />

    <TextView
        android:id="@+id/tx_take_a_breath_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/tx_take_a_breath_02"
        android:textColor="@color/color_tx_x"
        android:textSize="@dimen/size_tx_connect_smart_mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_take_a_breath_01" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_complete_setting_mask"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_btn_close_in_dialog"
        android:layout_marginStart="@dimen/margin_side_border_dialog_bluetooth"
        android:layout_marginTop="@dimen/margin_top_btn_complete_setting_mask"
        android:layout_marginEnd="@dimen/margin_side_border_dialog_bluetooth"
        android:layout_marginBottom="@dimen/margin_bottom_btn_close_in_dialog"
        android:background="@drawable/border_btn_close_dialog_bluetooth"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_take_a_breath_02">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_mask_setting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_complete_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:gravity="center"
            android:text="@string/tx_complete_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/size_tx_btn_next"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>