<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="kr.daejeonuinversity.lungexercise.view.infoinput.fragment.GenderFragment" />

        <variable
            name="viewmodel"
            type="kr.daejeonuinversity.lungexercise.viewmodel.GenderViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tx_select_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_frag_tx_birth"
            android:layout_marginTop="@dimen/margin_top_frag_tx_birth"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/tx_choice_gender"
            android:textColor="@color/black"
            android:textSize="@dimen/size_tx_input_birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_select_your_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_tx_select_your_gender"
            android:text="@string/tx_select_your_gender"
            android:textColor="@color/color_tx_select_your_gender"
            android:textSize="@dimen/size_tx_select_your_gender"
            app:layout_constraintStart_toStartOf="@+id/tx_select_gender"
            app:layout_constraintTop_toBottomOf="@+id/tx_select_gender" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_gender_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_side_constraint_gender_select"
            android:layout_marginTop="@dimen/margin_top_constraint_gender_select"
            android:layout_marginEnd="@dimen/margin_side_constraint_gender_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_select_your_gender">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_man"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_constraint_man"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{() -> viewmodel.btnMan()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon_man"
                    android:layout_width="@dimen/size_icon_gender_man"
                    android:layout_height="@dimen/size_icon_gender_man"
                    android:layout_marginTop="@dimen/margin_top_icon_man"
                    android:src="@drawable/icon_man"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tx_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_tx_gender"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/tx_gender_man"
                    android:textSize="@dimen/size_tx_man"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/icon_man" />

                <TextView
                    android:id="@+id/tx_man_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_tx_man_detail"
                    android:layout_marginBottom="@dimen/margin_bottom_tx_man_detail"
                    android:fontFamily="@font/pretendard_regular"
                    android:text="@string/tx_select_man"
                    android:textColor="@color/color_tx_man_detail"
                    android:textSize="@dimen/size_tx_man_detail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tx_man" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_woman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_constraint_woman"
                android:background="@drawable/border_constraint_man"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="@{() -> viewmodel.btnWoman()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_man">

                <ImageView
                    android:id="@+id/icon_woman"
                    android:layout_width="@dimen/size_icon_gender_man"
                    android:layout_height="@dimen/size_icon_gender_man"
                    android:layout_marginTop="@dimen/margin_top_icon_man"
                    android:src="@drawable/icon_woman"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tx_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_tx_gender"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/tx_gender_woman"
                    android:textSize="@dimen/size_tx_man"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/icon_woman" />

                <TextView
                    android:id="@+id/tx_woman_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_tx_man_detail"
                    android:layout_marginBottom="@dimen/margin_bottom_tx_man_detail"
                    android:fontFamily="@font/pretendard_regular"
                    android:text="@string/tx_select_woman"
                    android:textColor="@color/color_tx_man_detail"
                    android:textSize="@dimen/size_tx_man_detail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tx_woman" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>